fix not showing categories, number of transactions calculated wrong

--- a/src/app/pages/reports/category-report.component.css
+++ b/src/app/pages/reports/category-report.component.css
@@ -33,6 +33,7 @@
   padding: 1rem;
   background-color: rgba(255, 255, 255, 0.15);
   border-radius: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 /* Colored dot */
